--- a/interfaz.html
+++ b/interfaz.html
@@ -9,8 +9,11 @@
    
 
 </head>
-<b>
-    
+
+*{
+    text-aling: left;
+    color: tomato;
+}
 
 <body bgcolor="#efcc8c" font="Comic Sans MS">  
 
@@ -28,8 +31,7 @@
 
     <marquee  face="Arial Narrow" behavior="alternate" bgcolor="#efcc8c">
         <font color="black" size="5">
-            <center>MARCA DE ROPA GOD<br>
-            Materia: Programacion orientada a objetos</center></font></marquee>
+            <center>MARCA DE ROPA GOD<br>Materia: Programacion orientada a objetos</center></font></marquee>
 
 
 
